# sstr

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build_single_include.sh  copyright.tmpl  devbox.json  format_code.sh  mise.toml  plot_benchmarks.py  run_benchmarks.sh  run_klee.sh  run_klee_docker.sh  run_valgrind.sh  test_single_include
.github/workflows/: ci.yml  valgrind.yml
benchmarks/: .gitignore  README.md  basic_usage  bench_append_sstr  bench_append_sstr.c  bench_append_std  bench_append_std.c  bench_copy_n  bench_copy_n.c  bench_copy_sstr.c  bench_copy_std  bench_copy_std.c  bench_format_sstr  bench_format_sstr.c  bench_format_std  bench_format_std.c  formatting
examples/: basic_usage.c  format_validation  format_validation.c  formatting.c
include/sstr/: cbmc_stubs.h  sstr.h  sstr_config.h
klee/: sstr_append_harness.c  sstr_copy_harness.c  sstr_init_harness.c
single_include/: sstr.h
src/: sstr.c  sstr_format.c
tests/: test_core.c  test_format.c  test_runner.c  test_single_include.c  test_validation.c
verification/: sstr_append_harness.c  sstr_copy_harness.c  sstr_init_harness.c
